<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <!--
    constraintlayout uses to Login Screen
    Shows user field to set his data to login or creat a new account
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.login.LoginFragment">

        <TextView
            android:id="@+id/textView6"
            style="@style/text_style"
            android:layout_marginTop="80dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            style="@style/edit_style"
            android:hint="@string/hint_password"
            android:inputType="numberPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:autofillHints="" />


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:hint="@string/hint_email"
           android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            style="@style/edit_style"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView5"
            android:layout_marginTop="@dimen/larg_margin"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            style="@style/text_style" />

        <TextView
            android:id="@+id/textView7"
            style="@style/title_style"
            android:text="@string/title_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btLogin"
            android:text="@string/title_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
            tools:ignore="DuplicateSpeakableTextCheck"
            style="@style/button_style" />

        <Button
            android:id="@+id/btNewAccount"
            style="@style/button_style"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/new_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btLogin" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>